[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "large-memory-model"
version = "0.0.0"
description = "LargeMemoryModel (LMM): episodic/semantic/procedural memory and braid artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]

